--- a/RiMX/.env.example
+++ b/RiMX/.env.example
@@ -1,1 +1,5 @@
 VITE_BACKEND_URL=https://api.example.com
+
+# import backendUrl this way
+# const backendUrl = import.meta.env.VITE_BACKEND_URL;
+# console.log(backendUrl); // https://api.example.com
