completed login and signup logic

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-TWILIO_ACCOUNT_SID = "ACXXXXXXXX"
-TWILIO_AUTH_TOKEN = "your_auth_token"
+MONGO_URI = 'put connection string here'
+JWT_SECRET = 'Hello'
