added connection string

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,2 @@
-MONGO_URI = 'put connection string here'
-JWT_SECRET = 'Hello'
-CORS_FRONTEND = 'put your frontend url here'
+MONGO_URI = "mongodb+srv://devendrajangid202:e6Eie2Ne0857Qos6@cluster0.m79tf.mongodb.net/organisaion_management?retryWrites=true&w=majority&appName=Cluster0"
+CORS_FRONTEND = 'http://localhost:5173'
