connected login and signup

--- a/RiMX/.env.example
+++ b/RiMX/.env.example
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL=https://api.example.com
+VITE_BACKEND_URL=http://localhost:3000
 
 # import backendUrl this way
 # const backendUrl = import.meta.env.VITE_BACKEND_URL;
