--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
-MONGO_URI = "mongodb+srv://devendrajangid202:e6Eie2Ne0857Qos6@cluster0.m79tf.mongodb.net/organisaion_management?retryWrites=true&w=majority&appName=Cluster0"
-CORS_FRONTEND = 'http://localhost:5173'
+MONGO_URI = 
+CORS_FRONTEND = 
+JWT_SECRET = 
